Fix margin in header on mobile but 100% for real this time

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,7 +4,7 @@ header {
 
 @media (max-width: 768px) {
     header {
-        padding: 56px 0 100px !important;
+        padding: 26px 0 100px !important;
     }
 }
 
